<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_share_panel"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:columnCount="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TextView
            android:id="@+id/share_qq"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/umeng_socialize_qq"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/share_platform_qq"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_columnWeight="1" />

        <TextView
            android:id="@+id/share_qzone"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/umeng_socialize_qzone"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/share_platform_qzone"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_columnWeight="1" />

        <TextView
            android:id="@+id/share_wx"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/umeng_socialize_wechat"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/share_platform_wx"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_columnWeight="1" />

        <TextView
            android:id="@+id/share_wx_circle"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableTop="@drawable/umeng_socialize_wxcircle"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/share_platform_wx_circle"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_columnWeight="1" />

    </android.support.v7.widget.GridLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/grid" />


</android.support.constraint.ConstraintLayout>