<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <data>
        <variable
            name="handler"
            type="com.qixiu.lejia.core.me.profile.Viewhandler"></variable>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

        <android.support.constraint.ConstraintLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="30dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/login_icon_phone"
                android:gravity="center_vertical"
                android:hint="@string/login_hint_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backdrop" />

            <EditText
                android:id="@+id/edit_code"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/login_icon_code"
                android:gravity="center_vertical"
                android:hint="@string/login_hint_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

            <TextView
                android:id="@+id/btn_code"
                android:layout_width="90dp"
                android:layout_height="36dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/login_btn_code"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/login_get_code"
                android:textColor="@color/textColorSecondary"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="@+id/edit_code"
                app:layout_constraintEnd_toEndOf="@+id/edit_code" />

            <Button
                android:id="@+id/bind"
                style="@style/Button.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/login_over"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_code" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</layout>